codex-rs/tui/src/mcp/snapshots/codex_tui__mcp__manager_view__tests__mcp_manager_delete_confirm.snap
---
source: tui/src/mcp/manager_view.rs
expression: render_view(&view)
---
┌Configured MCP Servers────────────────────────────────────────────────┐
│Name               Transport        Details                 Status    │
│perplexity         stdio            perplexity-mcp --serve  failing   │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
└──────────────────────────────────────────────────────────────────────┘
┌Details───────────────────────────────────────────────────────────────┐
│Name: perplexity                                                      │
│Transport: stdio  Command: perplexity-mcp                             │
│Args: --serve                                                         │
│Env:                                                                  │
└──────────────────────────────────────────────────────────────────────┘
